# createx-shop

./: .gitignore  Makefile  example_env  manage.py  pyproject.toml  requirements.txt  test_helpers.py  test_settings.py
.github/workflows/: ci.yaml
apps/orders/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  utils.py
apps/products/: admin.py  api.py  filters.py  forms.py  models.py  pagination.py  serializers.py  translation.py  urls.py  utils.py
apps/products/management/commands/: create_fake_products.py
apps/products/models/: __init__.py  base.py  category.py  product.py  productvariant.py
apps/users/: admin.py  api.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py
apps/users/models/: __init__.py  favourite.py  resentview.py  review.py  user.py
create_fake_data/: MOCK_DATA.json  create_categories.py  create_products.py  create_variants.py
root/: settings.py  urls.py
tests/orders/: test_views.py
tests/products/: test_views.py
tests/users/: test_views.py
